NAME
	Changelog
DESCRIPTION
	This manpage keeps track of all changes made in Pythinux v3.0.0.
CHANGELOG
	- New libraries:
		- libargs
			Argument parser.
		- libgrab
			Library for 'grabbing' the output of the terminal.
			Successor to `giveOutput()`.
	- New programs:
		- out
			Saves the result of a command to a file.
		- ping
			Implementation of the UNIX ping utility in Pythinux.
		- shell
			Replacement for terminal.
		- curl
			Prints the contents of Internet files to the terminal.
	- Updated programs:
		- Updated most programs to be usable as libraries.
		- `sudo` is now a library instead of a command-line tool, meaning it
		is used instead of calling sudo().
	- Removed `initd` due to it not being necessary.