@@ -11,8 +11,6 @@ LIST
         Advanced directory creation that takes into account recursiveness as well as paths existing, meaning you don't have to.
     libcrypto
         Generate public/private keys and use them to encrypt and decrypt data. Also has functions for pickling and unpickling.
-    libconfig
-        Save a dictionary as a TOML config, and load it back as a dictionary.
     libjajl
         Run JAJL scripts.
     libtime
