@@ -1,23 +1,21 @@
-cls()
-div()
-print("Thank you for downloading Pythinux.")
-print("If you are new, please consult the interactive tutorial.")
-print("To run the tutorial, run `tutorial`.")
-div()
-print("Here is a list of common commands that may help you:")
-l = [
-        "* help",
-        "    * Provides a list of commands, all separated by spaces.",
-        "* man",
-        "    * Manual display system.",
-        "    * For a list of manuals, use `man /`.",
-        "* pkm",
-        "    * package manager for pythinux programs.",
-    ]
-print("\n".join(l))
-div()
-print("If you need support, go to the GitHub page:")
-print("https://github.com/WinFan3672/Pythinux")
-div()
-print("Alternatively, the official Pythinux wiki (https://pythinux.codeberg.page/wiki) could also provide helpful material for more technical users.")
-div()
+def welcome():
+    div()
+    print("Thank you for downloading Pythinux.")
+    div()
+    print("Here are some common commands which might interest you:")
+    print("* help")
+    print("    * Provides a list of commands.")
+    print("* man")
+    print("    * Manual display system.")
+    print("* pkm")
+    print("    * package manager for pythinux programs.")
+    div()
+    print("If you would like someone to help you, go to:")
+    print("https://codeberg.org/Pythinux/Pythinux")
+    print("and make an Issue.")
+    div()
+    print("Alternatively, the official Pythinux wiki (https://pythinux.codeberg.page/wiki) could also provide helpful material for more technical users.")
+    div()
+
+def main(args):
+    welcome()
